@@ -4,8 +4,6 @@ SET(PROJECT_VERSION_PATCH 0)
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
 ADD_DEFINITIONS(-DBUILDING_EFL__=1)
-ADD_DEFINITIONS(-DWTF_PLATFORM_EFL=1)
-SET(WTF_PLATFORM_EFL 1)
 
 FIND_PACKAGE(Cairo 1.10.2 REQUIRED)
 FIND_PACKAGE(Fontconfig 2.8.0 REQUIRED)
