@@ -1,3 +1,15 @@
+2012-11-23  Laszlo Gombos  <l.gombos@samsung.com>
+
+        [EFL] Define WTF_PLATFORM_EFL in Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=101482
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Define WTF_PLATFORM_EFL in Platform.h to be consistent with 
+        other ports.
+
+        * wtf/Platform.h:
+
 2012-11-16  Yury Semikhatsky  <yurys@chromium.org>
 
         Memory instrumentation: extract MemoryObjectInfo declaration into a separate file
